# spinal_destination

./: CMakeLists.txt  README.md  aruco_size_sim.py  camera_calibration.yml  camera_calibration_webcam.yml  solveRigidTrans.py  testfydpmotor.ino
Jan_29_Testing/: 18-58-08.json  19-00-55.json  19-02-18.json  process.py
March_5_Testing/: Testing_Position_1.json  Testing_Position_10.json  Testing_Position_2.json  Testing_Position_3.json  Testing_Position_4.json  Testing_Position_5.json  Testing_Position_6.json  Testing_Position_7.json  Testing_Position_8.json  Testing_Position_9.json  startpoint_accuracy_validation.py  test_statistic.txt  validation_single_case.py
March_7_Detection/: Test_Pos_1.json  Test_Pos_10.json  Test_Pos_11.json  Test_Pos_12.json  Test_Pos_13.json  Test_Pos_14.json  Test_Pos_14_backup.json  Test_Pos_2.json  Test_Pos_2_but_w_Marker_offset.json  Test_Pos_3.json  Test_Pos_4.json  Test_Pos_5.json  Test_Pos_6.json  Test_Pos_6_backup.json  Test_Pos_7.json  Test_Pos_8.json  Test_Pos_9.json  startpoint_accuracy_validation.py  validation_single_case.py
March_7_Projection/: Test_Position_1.json  Test_Position_10.json  Test_Position_2.json  Test_Position_3.json  Test_Position_4.json  Test_Position_5.json  Test_Position_6.json  Test_Position_7.json  Test_Position_8.json  Test_Position_9.json  startpoint_accuracy_validation.py
Sam's Calibration Files/: camera_calibration.yml
display/: CMakeLists.txt  display.py
displayer/: CMakeLists.txt  displayer.py
feb28_testing/: Keep_1.json  Keep_2.json  Keep_3.json  Keep_4.json  process.py
workflow/: workflow.py  (+1 more)
(+13 files in other folders)
